tests/baselines/reference/parserErrorRecovery_VariableList1.errors.txt
parserErrorRecovery_VariableList1.ts(1,6): error TS1009: Trailing comma not allowed.
parserErrorRecovery_VariableList1.ts(2,1): error TS1108: A 'return' statement can only be used within a function body.


==== parserErrorRecovery_VariableList1.ts (2 errors) ====
    var a,
         ~
!!! error TS1009: Trailing comma not allowed.
    return;
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.